[configure] Add -Werror to CC_TRY_FLAG
g++ only warns about using C-only warning flags, but add -Werror promotes
the warning to an error and enables correct detection of the unsupported
flags.

--- a/configure.in
+++ b/configure.in
@@ -756,7 +756,7 @@ AC_DEFUN([CAIRO_CC_TRY_FLAG], [
   AC_MSG_CHECKING([whether $CC supports $1])
 
   cairo_save_CFLAGS="$CFLAGS"
-  CFLAGS="$CFLAGS $1"
+  CFLAGS="$CFLAGS -Werror $1"
 
   AC_COMPILE_IFELSE([ ], [cairo_cc_flag=yes], [cairo_cc_flag=no])
   CFLAGS="$cairo_save_CFLAGS"
