--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -869,6 +869,13 @@ endif
 
 check_PROGRAMS += imagediff png-flatten
 
+if BUILD_ANY2PPM
+check_PROGRAMS += any2ppm
+any2ppm_CFLAGS = $(POPPLER_CFLAGS) $(LIBRSVG_CFLAGS)
+# add LDADD, so poppler/librsvg uses "our" cairo
+any2ppm_LDADD  = $(LDADD) $(POPPLER_LIBS) $(LIBRSVG_LIBS)
+endif
+
 if CAIRO_CAN_TEST_PDF_SURFACE
 check_PROGRAMS += pdf2png
 pdf2png_CFLAGS = $(POPPLER_CFLAGS)
