[configure.in] Autogenerate libtool version info
For unstable version 1.7.5 we create libcairo.so.2.10705.0
For   stable version 1.8.5 we create libcairo.so.2.10800.5

No more manual work.

--- a/configure.in
+++ b/configure.in
@@ -22,6 +22,10 @@ AM_INIT_AUTOMAKE([1.8])
 
 dnl ===========================================================================
 
+dnl
+dnl Version stuff
+dnl
+
 dnl This macro expands to one of 'git', 'snapshot', or 'release'
 m4_define([cairo_release_status],
 	  [m4_if(m4_eval(cairo_version_micro % 2), [1], [git],
@@ -31,18 +35,22 @@ m4_define([cairo_release_status],
 dnl This is the .so/dll number.  2 for cairo-1.x.x
 m4_define(cairo_version_sonum, m4_eval(cairo_version_major + 1))
 
-dnl libtool shared library version
-
-dnl Increment if the interface has additions, changes, removals.
-m4_define(cairo_libtool_current, 22)
-
-dnl Increment any time the source changes;
-dnl set to 0 if you increment cairo_libtool_current
-m4_define(cairo_libtool_revision, 0)
-
-m4_define(cairo_libtool_age, m4_eval(cairo_libtool_current - cairo_version_sonum))
-
-dnl ===========================================================================
+dnl The libtool shared library version stuff
+m4_define(cairo_version,
+	  m4_eval(cairo_version_major*10000 + cairo_version_minor*100 + cairo_version_micro))
+m4_if(m4_eval(cairo_version_minor % 2), [1],
+      [
+	dnl for unstable releases
+	m4_define(cairo_libtool_revision, 0)
+      ],
+      [
+	dnl for stable releases
+	m4_define(cairo_libtool_revision, cairo_version_micro)
+      ])
+m4_define(cairo_libtool_current,
+	  m4_eval(cairo_version_sonum + cairo_version - cairo_libtool_revision))
+m4_define(cairo_libtool_age,
+	  m4_eval(cairo_libtool_current - cairo_version_sonum))
 
 CAIRO_VERSION_MAJOR=cairo_version_major
 CAIRO_VERSION_MINOR=cairo_version_minor
