--- a/Makefile.win32
+++ b/Makefile.win32
@@ -2,6 +2,12 @@
 # Win32 makefile
 #
 
+ifeq ($(SUBMAKEFILE),1)
+  include ../Version.mk
+else
+  include Version.mk
+endif
+
 CC := cl
 LINK := link
 
@@ -25,9 +31,6 @@ DEFAULT_CFLAGS += -DCAIRO_NO_MUTEX=1  -DLIBCAIRO_EXPORTS
 
 CFLAGS := $(DEFAULT_CFLAGS)
 
-CAIRO_VERSION_MAJOR = 1
-CAIRO_VERSION_MINOR = 7
-CAIRO_VERSION_MICRO = 1
 
 CAIRO_VERSION = $(CAIRO_VERSION_MAJOR).$(CAIRO_VERSION_MINOR).$(CAIRO_VERSION_MICRO)
 
