--- a/configure.in
+++ b/configure.in
@@ -2,9 +2,11 @@ AC_PREREQ(2.58)
 
 dnl Parse Version.mk and declare m4 variables out of it
 m4_define([cairo_version_macro],
-		m4_bpatsubst(m4_include(Version.mk),
-			     [^\([a-zA-Z0-9_]*\) *= *\(.*\)],
-			     [[m4_define(\1, \[\2\])]]))
+		m4_translit(
+		m4_bpatsubst(m4_include(src/cairo-version.h),
+			     [^.define \([a-zA-Z0-9_]*\)  *\([0-9][0-9]*\)],
+			     [[m4_define(\1, \[\2\])]]),
+			    [A-Z], [a-z]))
 cairo_version_macro
 
 AC_INIT([cairo],
@@ -1023,24 +1025,6 @@ AC_CONFIG_COMMANDS([src/cairo-features.h],
 #ifndef CAIRO_FEATURES_H
 #define CAIRO_FEATURES_H
 
-#ifdef  __cplusplus
-# define CAIRO_BEGIN_DECLS  extern "C" {
-# define CAIRO_END_DECLS    }
-#else
-# define CAIRO_BEGIN_DECLS
-# define CAIRO_END_DECLS
-#endif
-
-#ifndef cairo_public
-# define cairo_public
-#endif
-
-#define CAIRO_VERSION_MAJOR $CAIRO_VERSION_MAJOR
-#define CAIRO_VERSION_MINOR $CAIRO_VERSION_MINOR
-#define CAIRO_VERSION_MICRO $CAIRO_VERSION_MICRO
-
-#define CAIRO_VERSION_STRING "$CAIRO_VERSION_MAJOR.$CAIRO_VERSION_MINOR.$CAIRO_VERSION_MICRO"
-
 _EOF
 	for FEATURE in $CAIRO_FEATURES; do
 		echo "#define CAIRO_HAS_$FEATURE 1" >> $outfile
@@ -1062,9 +1046,6 @@ _EOF
 ],[
 	CAIRO_FEATURES='$CAIRO_FEATURES'
 	CAIRO_NO_FEATURES='$CAIRO_NO_FEATURES'
-	CAIRO_VERSION_MAJOR=$CAIRO_VERSION_MAJOR
-	CAIRO_VERSION_MINOR=$CAIRO_VERSION_MINOR
-	CAIRO_VERSION_MICRO=$CAIRO_VERSION_MICRO
 ])
 AC_CONFIG_COMMANDS([src/cairo-no-features.h],
 [
