Some nasty tracks to make changing version number not cause a total rebuild
Quite slick!  This comes handy when git-bisect'ing.  The canonical version
number is in toplevel cairo-version.h now.

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,7 +5,7 @@ if CAIRO_HAS_PNG_FUNCTIONS
 SUBDIRS += boilerplate test perf
 endif
 
-configure: src/cairo-version.h
+configure: cairo-version.h
 
 .PHONY: doc test retest recheck check-valgrind
 # We have some generated header files, so we really need to build the
@@ -58,6 +58,7 @@ endif
 
 EXTRA_DIST = \
 	autogen.sh \
+	cairo-version.h \
 	AUTHORS \
 	BIBLIOGRAPHY \
 	BUGS \
