[configure.in] Add CAIRO_BEGIN/END_DECLS to config.h

--- a/configure.in
+++ b/configure.in
@@ -103,6 +103,16 @@ AX_C_FLOAT_WORDS_BIGENDIAN
 	;;
 esac
 
+AH_BOTTOM([
+#ifdef  __cplusplus
+# define CAIRO_BEGIN_DECLS  extern "C" {
+# define CAIRO_END_DECLS    }
+#else
+# define CAIRO_BEGIN_DECLS
+# define CAIRO_END_DECLS
+#endif
+])
+
 dnl ===========================================================================
 dnl === Local macros
 dnl ===========================================================================
