[configure] Add user-fonts to list of configured components

--- a/configure.in
+++ b/configure.in
@@ -1107,7 +1107,7 @@ dnl ===========================================================================
 V="$CAIRO_VERSION_MAJOR.$CAIRO_VERSION_MINOR.$CAIRO_VERSION_MICRO"
 echo ""
 echo "cairo (version $V [[$CAIRO_RELEASE_STATUS]]) will be compiled with the following surface backends:"
-echo "  image:         yes (always builtin)"
+echo "  Image:         yes (always builtin)"
 echo "  Xlib:          $use_xlib"
 echo "  Xlib Xrender:  $use_xlib_xrender"
 echo "  Quartz:        $use_quartz"
@@ -1123,6 +1123,7 @@ echo "  BeOS:          $use_beos"
 echo "  DirectFB:      $use_directfb"
 echo ""
 echo "the following font backends:"
+echo "  User:          yes (always builtin)"
 echo "  FreeType:      $use_ft"
 echo "  Win32:         $use_win32_font"
 echo "  Quartz:        $use_quartz_font"
