--- a/configure.in
+++ b/configure.in
@@ -856,6 +856,9 @@ MAYBE_WARN="-Wall -Wextra \
 -Wno-missing-field-initializers -Wno-unused-parameter \
 -Wno-attributes -Wno-long-long -Winline"
 
+dnl We also abuse the warning-flag facility to enable other compiler
+dnl options.  Namely, the following:
+MAYBE_WARN="$MAYBE_WARN -fno-strict-aliasing"
 
 # invalidate cached value if MAYBE_WARN has changed
 if test "x$cairo_cv_warn_maybe" != "x$MAYBE_WARN"; then
@@ -900,9 +903,6 @@ fi
 AC_DEFINE_UNQUOTED([WARN_UNUSED_RESULT], [$warn_unused_result],
 	  [Define to the value your compiler uses to support the warn-unused-result attribute])
 AC_MSG_RESULT([$warn_unused_result])
-
-CAIRO_CC_TRY_FLAG([-fno-strict-aliasing],
-		  [CAIRO_CFLAGS="$CAIRO_CFLAGS -fno-strict-aliasing"])
 
 AC_SUBST(CAIRO_REQUIRES)
 AC_SUBST(CAIRO_NONPKGCONFIG_CFLAGS)
