[src/Makefile.am] make check compile fix
Minor typo preventing TESTS from building.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -79,7 +79,7 @@ TESTS_SH = \
 	check-cairoint.sh \
 	check-doc-syntax.sh\
 	$(NULL)
-TESTS += TESTS_SH
+TESTS += $(TESTS_SH)
 if CROSS_COMPILING
 check: check-link
 else
