[src/Makefile.am] s/libcairo_la_CFLAGS/INCLUDES/
Update the custom rules after the overall to the build system.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,8 @@ DISTCLEANFILES =
 MAINTAINERCLEANFILES =
 BUILT_SOURCES =
 
+INCLUDES = -I$(srcdir) $(CAIRO_CFLAGS)
+
 if OS_WIN32
 export_symbols = -export-symbols cairo.def
 cairo_def_dependency = cairo.def
@@ -34,8 +36,6 @@ libcairo_la_SOURCES = \
 	$(enabled_cairo_sources) \
 	$(NULL)
 libcairo_la_LDFLAGS = -version-info $(CAIRO_LIBTOOL_VERSION_INFO) -no-undefined $(export_symbols)
-#libcairo_la_CFLAGS = -I$(srcdir) $(CAIRO_CFLAGS)
-INCLUDES = -I$(srcdir) $(CAIRO_CFLAGS)
 libcairo_la_LIBADD = $(CAIRO_LIBS) $(CAIRO_LDADD)
 libcairo_la_DEPENDENCIES = $(cairo_def_dependency)
 
@@ -95,14 +95,14 @@ CLEANFILES += check-link
 # The pre-processed result is used by check-{def,plt}.sh to determine whether
 # cairo has been compiled with symbol hiding.
 .c.i: $(cairoinclude_HEADERS) $(nodist_cairoinclude_HEADERS) cairoint.h $(top_builddir)/config.h
-	$(CPP) -DHAVE_CONFIG_H -I$(top_builddir) -I. $(libcairo_la_CFLAGS) $< -o $@
+	$(CPP) -DHAVE_CONFIG_H -I$(top_builddir) -I. $(INCLUDES) $< -o $@
 CLEANFILES += *.i *.s
 
 SPARSE = sparse
 sparse:
 	@status=true; for f in $(enabled_cairo_sources); do \
 		echo sparse $$f; \
-		$(SPARSE) -I$(top_builddir) $(libcairo_la_CFLAGS) -DHAVE_CONFIG_H $$f || status=false; \
+		$(SPARSE) -I$(top_builddir) $(INCLUDES) -DHAVE_CONFIG_H $$f || status=false; \
 	done; $$status
 
 SPLINT = splint -badflag
@@ -110,12 +110,12 @@ splint:
 	@status=true; for f in $(enabled_cairo_sources); do \
 		test "$$f" = "`echo "$$f" | sed 's/[.]h$$//'`" || continue; \
 		echo sparse $$f; \
-		$(SPLINT) -I$(top_builddir) $(libcairo_la_CFLAGS) -DHAVE_CONFIG_H $$f || status=false; \
+		$(SPLINT) -I$(top_builddir) $(INCLUDES) -DHAVE_CONFIG_H $$f || status=false; \
 	done; $$status
 
 UNO = uno
 uno:
-	@cpp_flags=`echo $(libcairo_la_CFLAGS) | sed 's/\(-I.*\) /\1 /g'`; \
+	@cpp_flags=`echo $(INCLUDES) | sed 's/\(-I.*\) /\1 /g'`; \
 	files=`echo $(enabled_cairo_sources) | sed 's/[^ ]*\.h//g'`; \
 	$(UNO) -I$(top_builddir) $$cpp_flags -DHAVE_CONFIG_H -U__GNUC__ $$files
 
