--- a/configure.in
+++ b/configure.in
@@ -333,7 +333,7 @@ AC_DEFUN([CAIRO_BACKEND_ENABLE],
 	      CAIRO_NONPKGCONFIG_LIBS="$$1_NONPKGCONFIG_LIBS$CAIRO_NONPKGCONFIG_LIBS"
 	      m4_define([cairo_backend_pc], m4_bpatsubst(src/cairo-$1.pc,_,-))
 	      AC_CONFIG_FILES(cairo_backend_pc():src/cairo-backend.pc.in,
-		      [sed \
+		      [$SED \
 			-e "s,@backend_name@,$1,g" \
 			-e "s,@Backend_Name@,$2,g" \
 			-e "s,@BACKEND_BASE@,$$1_BASE,g" \
@@ -344,6 +344,7 @@ AC_DEFUN([CAIRO_BACKEND_ENABLE],
 			AC_MSG_ERROR(failed to update cairo_backend_pc())
 		      ],
 		      [
+		       SED='$SED'
 		       $1_BASE='$$1_BASE'
 		       $1_REQUIRES='$$1_REQUIRES'
 		       $1_NONPKGCONFIG_LIBS='$$1_NONPKGCONFIG_LIBS'
